# sqsh-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yml  test.yml
sqsh-rs/: CHANGELOG.md  Cargo.toml
sqsh-rs/examples/: custom_source.rs  iterative_recursive_list.rs  list_dir_ll.rs  list_xattrs_ll.rs  read_file_ll.rs  recursive_list.rs  traverse_dir_ll.rs
sqsh-rs/src/: archive.rs  directory.rs  easy.rs  error.rs  export_table.rs  file.rs  id_table.rs  inode.rs  inode_map.rs  lib.rs  path_resolver.rs  reader.rs  source.rs  superblock.rs  traverse.rs  walker.rs  xattr.rs
sqsh-rs/src/utils/: mod.rs  small_c_string.rs
sqsh-rs/tests/: example.rs
sqsh-rs/tests/all/: custom_source.rs  inode_map.rs  mod.rs  path_resolver.rs
sqsh-rs/tests/all/snapshots/: example__all__path_resolver__at_subdir.snap  example__all__path_resolver__first_file.snap  example__all__path_resolver__first_subdir_file.snap  example__all__path_resolver__in_subdir.snap  example__all__path_resolver__root.snap  example__all__path_resolver__second_subdir_file.snap
sqsh-rs/tests/data/: make_archive.sh  pseudo-definitions.txt  test.sqsh
sqsh-rs/tests/snapshots/: example__compression_options.snap  example__recursive_directory.snap  example__subdir debug.snap  example__superblock.snap  example__traverse.snap  example__traverse_max_depth.snap  example__traverse_start_file.snap  example__traverse_start_subdir.snap  example__walk_whole_dir.snap
sqsh-sys/: CHANGELOG.md  Cargo.toml  bindgen_create.sh  build.rs
sqsh-sys/src/: bindings.rs  lib.rs
tools/ls/: Cargo.toml
tools/ls/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
