[package]
name = "sqsh-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3"
bstr = "1.5"
libc = "0.2"
sqsh-sys = { path = "../sqsh-sys", version = "0.2" }

[dev-dependencies]
insta = "1.30"