[package]
name = "sqsh-sys"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
flate2 = { version = "1.0", features = ["zlib-ng-compat"] }

[build-dependencies]
cc = "1.0"
walkdir = "2.3"

[lib]
# Some doc comments from bindgen contains code examples that are not valid Rust code
doctest = false